Directors without tests